DownLoad and Read From Device buttons created and span size modificated

--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -21,15 +21,15 @@
                         <div class="card-body">
                             <div class="form-row">
                                 <div class="form-group col-sm-4">
-                                    <label for="Horas" class="col-form-label-sm">Horas</label>
+                                    <label for="Horas" class="col-form-label-sm">Hours</label>
                                     <input type="number"  class="form-control form-control-sm" name="Horas" id="Horas" min="0" max="23" placeholder="0" value="0">
                                 </div>
                                 <div class="form-group col-sm-4">
-                                    <label for="Minutos" class="col-form-label-sm">Minutos</label>
+                                    <label for="Minutos" class="col-form-label-sm">Minutes</label>
                                     <input type="number" class="form-control form-control-sm" name="Minutos" id="Minutos" min="0" max="59" placeholder="0" value="0">
                                 </div>
                                 <div class="form-group col-sm-4">
-                                    <label for="Segundos" class="col-form-label-sm">Segundos</label>
+                                    <label for="Segundos" class="col-form-label-sm">Seconds</label>
                                     <input type="number" class="form-control form-control-sm" name="Segundos" id="Segundos" min="0" max="59" placeholder="0" value="0">
                                 </div>
                                 <div class="form-group col-sm-5">
@@ -92,14 +92,14 @@
                                 <div class="form-row">
                                     <label for="Analog1RangeMax" class="col-form-label-sm col-sm-2">Max</label>
                                     <input type="range" class="form-control-range" name="Analog1RangeMax" id="Analog1RangeMax" step="1" min="0" max="4096" value="2048" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="Analog1spanMax" id="Analog1spanMax">2048</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog1spanMax" id="Analog1spanMax">2048</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="Analog1RangeMin" class="col-form-label-sm col-sm-2">Min</label>
                                     <input type="range" class="form-control-range" name="Analog1RangeMin" id="Analog1RangeMin" step="1" min="0" max="4096" value="2048" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="Analog1spanMin" id="Analog1spanMin">2048</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog1spanMin" id="Analog1spanMin">2048</span>
                                 </div>
                             </div>
                         </div>
@@ -123,14 +123,14 @@
                                 <div class="form-row">
                                     <label for="Analog2RangeMax" class="col-form-label-sm col-sm-2">Max</label>
                                     <input type="range" class="form-control-range" name="Analog2RangeMax" id="Analog2RangeMax" step="1" max="4096" value="2048" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="Analog2spanMax" id="Analog2spanMax">2048</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog2spanMax" id="Analog2spanMax">2048</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="Analog2RangeMin" class="col-form-label-sm col-sm-2">Min</label>
                                     <input type="range" class="form-control-range" name="Analog2RangeMin" id="Analog2RangeMin" step="1" max="4096" value="2048" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="Analog2spanMin" id="Analog2spanMin">2048</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="Analog2spanMin" id="Analog2spanMin">2048</span>
                                 </div>
                             </div>
                         </div>
@@ -158,14 +158,14 @@
                                 <div class="form-row">
                                     <label for="SocRange" class="col-form-label-sm col-sm-2">Soc</label>
                                     <input type="range" class="form-control-range" name="SocRange" id="SocRange" step="1" max="100" value="50" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="SocSpan" id="SocSpan">50</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="SocSpan" id="SocSpan">50</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="VolRange" class="col-form-label-sm col-sm-2">Vol</label>
                                     <input type="range" class="form-control-range" name="VolRange" id="VolRange" step="1" max="4200" min="2700" value="3400" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="VolSpan" id="VolSpan">3400</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="VolSpan" id="VolSpan">3400</span>
                                 </div>
                             </div>
                         </div>
@@ -222,14 +222,14 @@
                                 <div class="form-row">
                                     <label for="HumidityRangeMax" class="col-form-label-sm col-sm-2">Max</label>
                                     <input type="range" class="form-control-range" name="HumidityRangeMax" id="HumidityRangeMax" step="1" max="100" value="50" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="HumidityspanMax" id="HumidityspanMax">50</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="HumidityspanMax" id="HumidityspanMax">50</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="HumidityRangeMin" class="col-form-label-sm col-sm-2">Min</label>
                                     <input type="range" class="form-control-range" name="HumidityRangeMin" id="HumidityRangeMin" step="1" max="100" value="50" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="HumidityspanMin" id="HumidityspanMin">50</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="HumidityspanMin" id="HumidityspanMin">50</span>
                                 </div>
                             </div>
                         </div>
@@ -253,14 +253,14 @@
                                 <div class="form-row">
                                     <label for="TempRangeMax" class="col-form-label-sm col-sm-2">Max</label>
                                     <input type="range" class="form-control-range" name="TempRangeMax" id="TempRangeMax" step="1" max="125" min="-40" value="0" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="TempSpanMax" id="TempSpanMax">0</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="TempSpanMax" id="TempSpanMax">0</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="TempRangeMin" class="col-form-label-sm col-sm-2">Min</label>
                                     <input type="range" class="form-control-range" name="TempRangeMin" id="TempRangeMin" step="1" max="125" min="-40" value="0" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="TempSpanMin" id="TempSpanMin">0</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="TempSpanMin" id="TempSpanMin">0</span>
                                 </div>
                             </div>
                         </div>
@@ -317,6 +317,7 @@
                                     <option style="background-color: #00ffff;">4</option>
                                     <option style="background-color: #ff00ff;">5</option>
                                     <option style="background-color: #000000;">6</option>
+                                    <option style="background-color: #ffffff;">7</option>
                                 </select>
                             </div>
                         </div>
@@ -340,14 +341,14 @@
                                 <div class="form-row">
                                     <label for="VibrationRangeMax" class="col-form-label-sm col-sm-2">Max</label>
                                     <input type="range" class="form-control-range" name="VibrationRangeMax" id="VibrationRangeMax" step="1" max="100" value="50" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="VibrationSpanMax" id="VibrationSpanMax">50</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2 name="VibrationSpanMax" id="VibrationSpanMax">50</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="VibrationRangeMin" class="col-form-label-sm col-sm-2">Min</label>
                                     <input type="range" class="form-control-range" name="VibrationRangeMin" id="VibrationRangeMin" step="1" max="100" value="50" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="VibrationSpanMin" id="VibrationSpanMin">50</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="VibrationSpanMin" id="VibrationSpanMin">50</span>
                                 </div>
                             </div>
                         </div>
@@ -371,14 +372,14 @@
                                 <div class="form-row">
                                     <label for="AngleRangeMax" class="col-form-label-sm col-sm-2">Max</label>
                                     <input type="range" class="form-control-range" name="AngleRangeMax" id="AngleRangeMax" step="1" max="360" value="90" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="AngleSpanMax" id="AngleSpanMax">90</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="AngleSpanMax" id="AngleSpanMax">90</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="AngleRangeMin" class="col-form-label-sm col-sm-2">Min</label>
                                     <input type="range" class="form-control-range" name="AngleRangeMin" id="AngleRangeMin" step="1" max="360" value="90" disabled>
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" name="AngleSpanMin" id="AngleSpanMin">90</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="AngleSpanMin" id="AngleSpanMin">90</span>
                                 </div>
                             </div>
                         </div>
@@ -386,8 +387,16 @@
                 </div>
 
             </div>
-
-            <input id="dashboard1-submit" type="submit"> </input>
+            
+            <div class="row">
+                <!-- <input id="dashboard1-submit" type="submit"> </input> -->
+                <div class="col-sm-6 mb-4">
+                    <button type="button" class="btn btn-outline-primary col">DownLoad</button>
+                </div>
+                <div class="col-sm-6">
+                    <button type="button" class="btn btn-outline-secondary col">Read From Device</button>
+                </div>
+            </div>
         </form>
     </div>
 
