--- a/src/components/dashboard2/dashboard2.html
+++ b/src/components/dashboard2/dashboard2.html
@@ -12,7 +12,7 @@
                     <div class="form-row">
                         <div class="form-group col-sm-2">
                             <label for="inputEmail4" class="col-form-label-sm">Horas</label>
-                            <input type="number" name="dashboard2_hours" class="form-control form-control-sm" id="inputEmail4" min="0" max="23" placeholder="0">
+                            <input type="number" name="dashboard2_hour" class="form-control form-control-sm" id="inputEmail4" min="0" max="23" placeholder="0">
                         </div>
                         <div class="form-group col-sm-2">
                             <label for="inputPassword4" class="col-form-label-sm">Minutos</label>
