dashboard command generator

--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -391,7 +391,7 @@
             <div class="row">
                 <!-- <input id="dashboard1-submit" type="submit"> </input> -->
                 <div class="col-sm-6 mb-4">
-                    <button type="button" class="btn btn-outline-primary col">DownLoad</button>
+                    <button type="submit" class="btn btn-outline-primary col">DownLoad</button>
                 </div>
                 <div class="col-sm-6">
                     <button type="button" class="btn btn-outline-secondary col">Read From Device</button>
