--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -3,8 +3,37 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <h1 class="title-dashboard">iButton Isquare </h1>
-                <h3 class="title-dashboard">Operation Mode: Wi-Fi</h3>
+                <div class="card">
+                    <div class="card-header">
+                        <h1 class="title-dashboard">iButton Isquare </h1>
+                    </div>
+                    <div class="card-body">
+                        <div class="form-row">
+                            <div class="col-sm-5">
+                                <input class="form-control form-control-sm mb-1" type="text" placeholder="Operation Mode">
+                            </div>
+                            <div class="col-sm-4">
+                                <button type="button" class="btn btn-primary btn-get btn-sm" >Get Mode</button>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-sm-5">
+                                <input class="form-control form-control-sm mb-1" type="text" placeholder="SigFox Id">
+                            </div>
+                            <div class="col-sm-4">
+                                <button type="button" class="btn btn-primary btn-get btn-sm">Get ID</button>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-sm-5">
+                                <input class="form-control form-control-sm mb-1" type="text" placeholder="Sigfox PAC">
+                            </div>
+                            <div class="col-sm-4">
+                                <button type="button" class="btn btn-primary btn-get btn-sm">Get PAC</button>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
             </div>
             <div class="col-6 mb-4">
                 <img class="image-isquare" src="../assets/img/isquare2.png">
@@ -38,8 +67,7 @@
                                 </div>
                                 <div class="form-group col-sm-4">
                                     <label for="TimeKeep" class="col-form-label-sm">Time</label>
-                                    <input type="text" class="form-control form-control-sm" name="TimeKeep" id="TimeKeep" 
-                                        placeholder="0"  disabled>
+                                    <input type="text" class="form-control form-control-sm" name="TimeKeep" id="TimeKeep" placeholder="0" disabled>
                                 </div>
                             </div>
                         </div>
@@ -52,24 +80,28 @@
                         <div class="card-header"><strong>Reports Enablers</strong></div>
                         <div class="card-body">
                             <div class="custom-control custom-switch">
-                                <input type="checkbox" name="WiFi" class="custom-control-input" name="WiFiSwitch" id="WiFiSwitch" group="wifi_switch">
+                                <input type="checkbox" class="custom-control-input" name="WiFiSwitch" id="WiFiSwitch" group="wifi_switch">
                                 <label class="custom-control-label" for="WiFiSwitch">Report Wi-Fi Location</label>
                             </div>
                             <div class="custom-control custom-switch">
-                                <input type="checkbox" name="AlwaysReport" class="custom-control-input" name="AlwaysReportSwitch" id="AlwaysReportSwitch" group="always_report_switch" >
+                                <input type="checkbox" class="custom-control-input" name="AlwaysReportSwitch" id="AlwaysReportSwitch" group="always_report_switch" >
                                 <label class="custom-control-label" for="AlwaysReportSwitch">Always Send report</label>
                             </div>
                             <div class="custom-control custom-switch">
-                                <input type="checkbox" name="DownLink" class="custom-control-input" name="DownLinkSwitch" id="DownLinkSwitch" group="down_link_switch">
+                                <input type="checkbox" class="custom-control-input" name="DownLinkSwitch" id="DownLinkSwitch" group="down_link_switch">
                                 <label class="custom-control-label" for="DownLinkSwitch">Downlink Enable</label>
                             </div>
                             <div class="custom-control custom-switch">
-                                <input type="checkbox" name="RedundantMsn" class="custom-control-input" name="RedundantMsnSwitch" id="RedundantMsnSwitch" group="redundant_msn_switch">
+                                <input type="checkbox" class="custom-control-input" name="RedundantMsnSwitch" id="RedundantMsnSwitch" group="redundant_msn_switch">
                                 <label class="custom-control-label" for="RedundantMsnSwitch">Redundant Messge</label>
                             </div>
                             <div class="custom-control custom-switch">
-                                <input type="checkbox" name="OnlySend" class="custom-control-input" name="OnlySendSwitch" id="OnlySendSwitch" group="only_send_switch">
+                                <input type="checkbox" class="custom-control-input" name="OnlySendSwitch" id="OnlySendSwitch" group="only_send_switch">
                                 <label class="custom-control-label" for="OnlySendSwitch">Only Send location</label>
+                            </div>
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input" name="GPSSwitch" id="gpsSwitch" group="gps_switch">
+                                <label class="custom-control-label" for="gpsSwitch">Report GPS Location</label>
                             </div>
                         </div>
                     </div>
@@ -179,27 +211,29 @@
                             <div class="form-row">
                                 <div class="col-sm-10"><strong>Digital Input Options</strong></div>
                                 <div class="custom-control custom-switch">
-                                    <input type="checkbox" name="DigitalIn" class="custom-control-input" name="DISwitch" id="DISwitch" group="digital_input_options">
+                                    <input type="checkbox" class="custom-control-input" name="DISwitch" id="DISwitch" group="digital_input_options">
                                     <label class="custom-control-label" for="DISwitch"></label>
                                 </div>
                             </div>
                         </div>
                         <div class="card-body">
-                            <div class="form-group">
-                                <label for="DigitalIn1Select">Digital Input 1</label>
-                                <select class="form-control" name="DigitalIn1Select" id="DigitalIn1Select" disabled group="digital_input_options">
-                                    <option>Rising Edge</option>
-                                    <option>Falling Edge</option>
-                                    <option>Both</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="DigitalIn2Select">Digital Input 2</label>
-                                <select class="form-control" name="DigitalIn2Select" id="DigitalIn2Select" disabled group="digital_input_options">
-                                    <option>Rising Edge</option>
-                                    <option>Falling Edge</option>
-                                    <option>Both</option>
-                                </select>
+                            <div class="form-row">
+                                <div class="form-group col-sm-6">
+                                    <label for="DigitalIn1Select" class="col-form-label-sm">Digital Input 1</label>
+                                    <select class="form-control form-control-sm" name="DigitalIn1Select" id="DigitalIn1Select" disabled group="digital_input_options">
+                                        <option>Rising Edge</option>
+                                        <option>Falling Edge</option>
+                                        <option>Both</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-sm-6">
+                                    <label for="DigitalIn2Select" class="col-form-label-sm">Digital Input 2</label>
+                                    <select class="form-control form-control-sm" name="DigitalIn2Select" id="DigitalIn2Select" disabled group="digital_input_options">
+                                        <option>Rising Edge</option>
+                                        <option>Falling Edge</option>
+                                        <option>Both</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -284,8 +318,8 @@
                         </div>
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="ZoneSelect">Zone</label>
-                                <select class="form-control" name="ZoneSelect" id="ZoneSelect" disabled group="sigfox_zone">
+                                <label for="ZoneSelect" class="col-form-label-sm">Zone</label>
+                                <select class="form-control form-control-sm" name="ZoneSelect" id="ZoneSelect" disabled group="sigfox_zone">
                                     <option value="RCZ2">RCZ2</option>
                                     <option value="RCZ4">RCZ4</option>
                                 </select>
@@ -301,25 +335,73 @@
                             <div class="form-row">
                                 <div class="col-sm-10"><strong>LED Color</strong></div>
                                 <div class="custom-control custom-switch">
-                                    <input type="checkbox" name="SigFoxZone" class="custom-control-input" name="ColorSwitch" id="ColorSwitch" group="led_color">
+                                    <input type="checkbox" class="custom-control-input" name="ColorSwitch" id="ColorSwitch" group="led_color">
                                     <label class="custom-control-label" for="ColorSwitch"></label>
                                 </div>
                             </div>
                         </div>
                         <div class="card-body">
-                            <div class="form-group">
-                                <label for="ZoneSelect">Color</label>
-                                <select class="form-control" name="ColorSelect" id="ColorSelect" disabled group="led_color">
-                                    <option style="background-color: #ffff00;">0</option>
-                                    <option style="background-color: #0000ff;">1</option>
-                                    <option style="background-color: #ff0000;">2</option>
-                                    <option style="background-color: #00ff00;">3</option>
-                                    <option style="background-color: #00ffff;">4</option>
-                                    <option style="background-color: #ff00ff;">5</option>
-                                    <option style="background-color: #000000;">6</option>
-                                    <option style="background-color: #ffffff;">7</option>
-                                </select>
+                            <div class="form-row">
+                                <div class="form-group col-sm-4">
+                                    <label for="pulsations" class="col-form-label-sm">Pulsations</label>
+                                    <input type="number"  class="form-control form-control-sm" name="Puls" id="pulsations" min="0" max="3" placeholder="0" value="0" group="led_color" disabled>
+                                </div>
                             </div>
+ 
+                            <div class="form-row">
+                                <div class="form-group col-sm-3">
+                                    <label for="Color1"  class="col-form-label-sm"> Color 1</label>
+                                    <select class="form-control form-control-sm" name="ColorSelect1" id="Color1" disabled group="led_color">
+                                        <option style="background-color: #000000;" value="1"></option>
+                                        <option style="background-color: #0000ff;"></option>
+                                        <option style="background-color: #00ff00;"></option>
+                                        <option style="background-color: #00ffff;"></option>
+                                        <option style="background-color: #ff0000;"></option>
+                                        <option style="background-color: #ff00ff;"></option>
+                                        <option style="background-color: #ffff00;"></option>
+                                        <option style="background-color: #ffffff;"></option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label for="Color2" class="col-form-label-sm">Color 2</label>
+                                    <select class="form-control form-control-sm" name="ColorSelect2" id="Color2" disabled group="led_color">
+                                        <option style="background-color: #000000;" value="1"></option>
+                                        <option style="background-color: #0000ff;"></option>
+                                        <option style="background-color: #00ff00;"></option>
+                                        <option style="background-color: #00ffff;"></option>
+                                        <option style="background-color: #ff0000;"></option>
+                                        <option style="background-color: #ff00ff;"></option>
+                                        <option style="background-color: #ffff00;"></option>
+                                        <option style="background-color: #ffffff;"></option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label for="Color3" class="col-form-label-sm">Color 3</label>
+                                    <select class="form-control form-control-sm" name="ColorSelect3" id="Color3" disabled group="led_color">
+                                        <option style="background-color: #000000;" value="1"></option>
+                                        <option style="background-color: #0000ff;"></option>
+                                        <option style="background-color: #00ff00;"></option>
+                                        <option style="background-color: #00ffff;"></option>
+                                        <option style="background-color: #ff0000;"></option>
+                                        <option style="background-color: #ff00ff;"></option>
+                                        <option style="background-color: #ffff00;"></option>
+                                        <option style="background-color: #ffffff;"></option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <label for="Cancel" class="col-form-label-sm">Cancel</label>
+                                    <select class="form-control form-control-sm" name="ColorSelectCancel" id="Cancel" disabled group="led_color">
+                                        <option style="background-color: #000000;" value="1"></option>
+                                        <option style="background-color: #0000ff;"></option>
+                                        <option style="background-color: #00ff00;"></option>
+                                        <option style="background-color: #00ffff;"></option>
+                                        <option style="background-color: #ff0000;"></option>
+                                        <option style="background-color: #ff00ff;"></option>
+                                        <option style="background-color: #ffff00;"></option>
+                                        <option style="background-color: #ffffff;"></option>
+                                    </select>
+                                </div>
+                            </div>                        
                         </div>
                     </div>
                 </div>
@@ -341,7 +423,7 @@
                                 <div class="form-row">
                                     <label for="VibrationRangeMax" class="col-form-label-sm col-sm-2">Max</label>
                                     <input type="range" class="form-control-range" name="VibrationRangeMax" id="VibrationRangeMax" step="1" max="100" value="50" disabled group="vibration">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2 name="VibrationSpanMax" id="VibrationSpanMax">50</span>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="VibrationSpanMax" id="VibrationSpanMax">50</span>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -391,10 +473,10 @@
             <div class="row">
                 <!-- <input id="dashboard1-submit" type="submit"> </input> -->
                 <div class="col-sm-6 mb-4">
-                    <button type="submit" class="btn btn-outline-primary col">DownLoad</button>
+                    <button type="submit" class="btn btn-outline-primary btn-Download_Read col" id="DownLoad">DownLoad</button>
                 </div>
                 <div class="col-sm-6">
-                    <button type="button" class="btn btn-outline-secondary col">Read From Device</button>
+                    <button type="button" class="btn btn-outline-secondary btn-Download_Read col">Read From Device</button>
                 </div>
             </div>
         </form>
