--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,12 +1,15 @@
 /* NavMain */
 
 .navMain {
-    width: 300px;
+  width: 300px;
+    height: 100%;
     /* overflow-x: hidden; */
     overflow-y: auto;
     color: var(--color-subtle);
     border-right: 1px solid var(--color);
-    background-color: var(--color-bg);
+    /* background-color: var(--color-bg); */
+    background-image: url("../img/fondo1.jpg");
+    /* background-repeat: ; */
     /* visibility: hidden; */
     /* opacity: 0; */
   }
@@ -14,7 +17,11 @@
     visibility: visible;;
     opacity: 1;
   }
-  
+
+  /* .fixed-bottom {
+    width: 10%;
+    margin-left: 10%;
+  } */
   .navMain-header {
     position: relative;
     padding: 2rem;
