read data from device

--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -476,7 +476,7 @@
                     <button type="submit" class="btn btn-outline-primary btn-Download_Read col" id="DownLoad">DownLoad</button>
                 </div>
                 <div class="col-sm-6">
-                    <button type="button" class="btn btn-outline-secondary btn-Download_Read col">Read From Device</button>
+                    <button type="button" class="btn btn-outline-secondary btn-Download_Read col" id="read_from_device">Read From Device</button>
                 </div>
             </div>
         </form>
