--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -2,17 +2,23 @@
 
 .navMain {
   width: 300px;
-    height: 100%;
-    /* overflow-x: hidden; */
-    overflow-y: auto;
-    color: var(--color-subtle);
-    border-right: 1px solid var(--color);
-    /* background-color: var(--color-bg); */
-    background-image: url("../img/fondo1.jpg");
-    /* background-repeat: ; */
-    /* visibility: hidden; */
-    /* opacity: 0; */
-  }
+  height: 100%;
+  /* overflow-x: hidden; */
+  overflow-y: auto;
+  color: var(--color-subtle);
+  border-right: 1px solid var(--color);
+  background-color: #00135b;               /*var(--color-bg);*/
+  background-image: url("../img/fondo.png");
+  background-repeat: no-repeat;
+  /* visibility: hidden; */
+  /* opacity: 0; */
+}
+
+/* clores Tecrea
+Hexadecimal azul: #00135b
+Hexadecimal amarillo claro: #fad13f
+Hexadecimal amarillo oscuro: #f3a000 */
+
   .navMain.is-shown {
     visibility: visible;;
     opacity: 1;
