get_mode get_id and get_pac event added

--- a/src/components/dashboard1/dashboard1.css
+++ b/src/components/dashboard1/dashboard1.css
@@ -61,4 +61,6 @@ label {
     font-weight: 600;
     font-size: 0.9rem;
     height: 25px;
+    background-color: #00135b;
+    border-color: #00135b;
 }
