--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -432,6 +432,15 @@
                                     <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="VibrationSpanMax" id="VibrationSpanMax">100</span>
                                 </div>
                             </div>
+
+                            <div class="form-group">
+                                <div class="form-row">
+                                    <label for="VibrationRangeMed" class="col-form-label-sm col-sm-2">Med</label>
+                                    <input type="range" class="form-control-range" name="VibrationRangeMed" id="VibrationRangeMed" step="1" max="100" value="50" disabled group="vibration">
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="VibrationRangeMed" id="VibrationRangeMed">50</span>
+                                </div>
+                            </div>
+
                             <div class="form-group">
                                 <div class="form-row">
                                     <label for="VibrationRangeMin" class="col-form-label-sm col-sm-2">Min</label>
@@ -458,18 +467,35 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <div class="form-row">
-                                    <label for="AngleRangeMax" class="col-form-label-sm col-sm-2">Max</label>
-                                    <input type="range" class="form-control-range" name="AngleRangeMax" id="AngleRangeMax" step="1" max="360" value="360" disabled group="tilt_angle">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="AngleSpanMax" id="AngleSpanMax">360</span>
+                                    <label for="AngleRangeX-Max" class="col-form-label-sm col-sm-3">X-Max</label>
+                                    <input type="range" class="form-control-range" name="AngleRangeX-Max" id="AngleRangeX-Max" step="1" max="360" value="360" disabled group="tilt_angle">
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="AngleSpanX-Max" id="AngleSpanX-Max">360</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
-                                    <label for="AngleRangeMin" class="col-form-label-sm col-sm-2">Min</label>
-                                    <input type="range" class="form-control-range" name="AngleRangeMin" id="AngleRangeMin" step="1" max="360" value="0" disabled group="tilt_angle">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="AngleSpanMin" id="AngleSpanMin">0</span>
+                                    <label for="AngleRangeMin" class="col-form-label-sm col-sm-3">X-Min</label>
+                                    <input type="range" class="form-control-range" name="AngleRangeMin" id="AngleRangeX-Min" step="1" max="360" value="0" disabled group="tilt_angle">
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="AngleSpanX-Min" id="AngleSpanX-Min">0</span>
                                 </div>
                             </div>
+
+                            <div class="form-group">
+                                <div class="form-row">
+                                    <label for="AngleRangeY-Max" class="col-form-label-sm col-sm-3">Y-Max</label>
+                                    <input type="range" class="form-control-range" name="AngleRangeY-Max" id="AngleRangeY-Max" step="1" max="360" value="360" disabled group="tilt_angle">
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="AngleSpanY-Max" id="AngleSpanY-Max">360</span>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="form-row">
+                                    <label for="AngleRangeY-Min" class="col-form-label-sm col-sm-3">Y-Min</label>
+                                    <input type="range" class="form-control-range" name="AngleRangeY-Min" id="AngleRangeY-Min" step="1" max="360" value="0" disabled group="tilt_angle">
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1 mb-2" name="AngleSpanY-Min" id="AngleSpanY-Min">0</span>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
